added the class